--- a/package.json
+++ b/package.json
@@ -9,16 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.1.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "docx": "^9.1.1",
+    "fs": "0.0.1-security",
+    "html-docx-js": "^0.3.1",
+    "html-to-docx": "^1.8.0",
+    "html-to-json-parser": "^2.0.1",
+    "html-to-text": "^9.0.5",
+    "html2canvas": "^1.4.1",
+    "jsdom": "^26.0.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "mammoth": "^1.9.0",
+    "next": "15.1.6",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-quill": "2.0.0-beta.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/file-saver": "^2.0.7",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "file-saver": "^2.0.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.7.3"
   }
 }
