--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
+    "better-sqlite3": "^11.8.1",
     "cheerio": "^1.0.0",
     "docx": "^9.1.1",
+    "drizzle-orm": "^0.39.2",
     "fs": "0.0.1-security",
     "html-docx-js": "^0.3.1",
     "html-to-docx": "^1.8.0",
@@ -28,11 +31,13 @@
     "mammoth": "^1.9.0",
     "next": "15.1.6",
     "quill": "^2.0.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
-    "react-quill": "2.0.0-beta.4"
+    "react-dom": "^18.3.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
@@ -42,6 +47,7 @@
     "@types/react-dom": "^19",
     "file-saver": "^2.0.5",
     "postcss": "^8",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   }
