--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.8.1",
     "cheerio": "^1.0.0",
     "docx": "^9.1.1",
@@ -26,6 +28,7 @@
     "html-to-text": "^9.0.5",
     "html2canvas": "^1.4.1",
     "jsdom": "^26.0.0",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "mammoth": "^1.9.0",
@@ -40,6 +43,7 @@
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
