--- a/package.json
+++ b/package.json
@@ -31,13 +31,19 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "lucide-react": "^0.475.0",
     "mammoth": "^1.9.0",
     "next": "15.1.6",
     "quill": "^2.0.3",
+    "quill-better-table": "^1.2.10",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize": "^3.0.9",
+    "quill-table": "^1.0.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.10.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "sweetalert2": "^11.15.10"
